--- a/src/app.json
+++ b/src/app.json
@@ -2,11 +2,30 @@
   "pages":[
     "pages/index/main",
     "pages/list/main",
-    "pages/detail/main"
+    "pages/detail/main",
+    "pages/movies/main",
+    "pages/movieDetail/main"
   ],
   "window": {
     "navigationBarBackgroundColor": "#87CEEB",
     "navigationBarTitleText": "硅谷周刊",
     "navigationBarTextStyle": "white"
+  },
+  "tabBar": {
+    "position": "bottom",
+    "list": [
+      {
+        "pagePath": "pages/list/main",
+        "text": "文与字",
+        "iconPath": "/static/images/tab/yuedu.png",
+        "selectedIconPath": "/static/images/tab/yuedu_hl.png"
+      },  
+      {
+        "pagePath": "pages/movies/main",
+        "text": "电影频道",
+        "iconPath": "/static/images/tab/dianying.png",
+        "selectedIconPath": "/static/images/tab/dianying_hl.png"
+      }
+    ]
   }
 }
